curiositymachine/static/less/banners.less
.ai-banner {
  display: block;
  background-image: url("../images/ai_banner.png");
  height: 10vw;
  object-fit: scale-down;
  background-position: center;
  text-align: center;
  margin: 0px -65px 0;
}
.ai-banner .ai-banner-font {
  font-family: 'Raleway', Helvetica, sans-serif;
  margin-bottom: 0.75em;
  color: white;
  -webkit-font-smoothing: antialiased;
  white-space:nowrap;
}
.ai-banner .ai-banner-font-primary {
  font-size: 3.35vw;
  line-height: 2;
  text-shadow: #ff5471 0.3vw 0.3vw 0px;
  font-weight: 600;
}
.ai-banner .ai-banner-font-secondary {
  font-size: 1.75vw;
  margin-top: -3.2vw;
  text-shadow: #ff5471 0.2vw 0.2vw 0px;
  font-weight: 300;
}
.ai-banner:hover{
  text-decoration: none;
}
.ai-banner:hover .ai-banner-font.ai-banner-font-secondary{
  text-shadow: #ffabac 0.2vw 0.2vw 0px;
  color: #b80000;
}
.ai-banner:hover .ai-banner-font.ai-banner-font-primary{
  text-shadow: #ffabac 0.3vw 0.3vw 0px;
  color: #b80000;
}

